--- a/src/layout/container/Container.scss
+++ b/src/layout/container/Container.scss
@@ -1,14 +1,20 @@
 @import "common/scss/utils.scss";
 
 #container {
+  width: calc(100% - 251px);
   .primary {
-    border-bottom:1px solid #eeeeee;
-    padding: 20px;
-    background-color: $primary-color;
+    border-bottom: 1px solid #eeeeee;
+    height: 70px;
+    @include flex(center, initial);
+    padding-left: 20px;
     h4 {
-      font-size:30px;
-      font-weight:900;
-      color:white;
+      font-size: 20px;
+      font-weight: 600;
     }
+  }
+  .content {
+    height: calc(100% - 171px);
+    overflow: auto;
+    padding: 50px;
   }
 }
