--- a/src/common/scss/utils.scss
+++ b/src/common/scss/utils.scss
@@ -15,3 +15,5 @@ $primary-color: #007acc;
 $disabledB-color: #dddddd;
 $disabledT-color: #a5a5a5;
 $placehold-color: #999999;
+$focus-color: #007acc;
+$error-color: red;
