dialog portal 태우는중

--- a/src/common/scss/reset.scss
+++ b/src/common/scss/reset.scss
@@ -38,3 +38,5 @@ html {
 @import "./components/ui_button.scss";
 @import "./components/ui_input.scss";
 @import "./components/ui_loading.scss";
+@import "./components/ui_label.scss";
+@import "./components/ui_dialog.scss";
