--- a/src/common/scss/components/ui_dialog.scss
+++ b/src/common/scss/components/ui_dialog.scss
@@ -1,11 +1,34 @@
 @import "common/scss/utils.scss";
 
-.di_background {
-  background-color: rgba(0, 0, 0, 0.4);
-  position: absolute;
+.dialog-box {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   width: 100%;
   height: 100%;
-  left: 0px;
-  top: 0px;
-  z-index: -1;
+  .content-box {
+    position: relative;
+    @include flex(center, center);
+    width: 100%;
+    height: 100%;
+    .content-bg {
+      background-color: white;
+      padding: 20px;
+      z-index: 2;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+    }
+    .di_background {
+      background-color: rgba(0, 0, 0, 0.4);
+      width: 100%;
+      height: 100%;
+      position: absolute;
+      z-index: 1;
+      top: 0;
+      left: 0;
+    }
+  }
 }
