--- a/src/common/scss/components/ui_dialog.scss
+++ b/src/common/scss/components/ui_dialog.scss
@@ -12,7 +12,9 @@
     @include flex(center, center);
     width: 100%;
     height: 100%;
-    .content-bg {
+    .content-area {
+      min-width: 300px;
+      border-radius: 8px;
       background-color: white;
       padding: 20px;
       z-index: 2;
