checkBox Componet 완성

--- a/src/common/scss/reset.scss
+++ b/src/common/scss/reset.scss
@@ -40,3 +40,4 @@ html {
 @import "./components/ui_loading.scss";
 @import "./components/ui_label.scss";
 @import "./components/ui_dialog.scss";
+@import "./components/ui_checkbox.scss";
