--- a/src/pages/navigator/Navigator.scss
+++ b/src/pages/navigator/Navigator.scss
@@ -9,7 +9,7 @@ nav {
       background-color: rgb(228, 238, 255);
     }
     &.active {
-      font-weight: 500;
+      color: $primary-color;
     }
   }
 }
