--- a/src/common/scss/reset.scss
+++ b/src/common/scss/reset.scss
@@ -41,3 +41,4 @@ html {
 @import "./components/ui_label.scss";
 @import "./components/ui_dialog.scss";
 @import "./components/ui_checkbox.scss";
+@import "./components/ui_radio.scss";
