--- a/src/common/scss/reset.scss
+++ b/src/common/scss/reset.scss
@@ -42,3 +42,4 @@ html {
 @import "./components/ui_dialog.scss";
 @import "./components/ui_checkbox.scss";
 @import "./components/ui_radio.scss";
+@import "./components/ui_switch.scss";
