accordion component 외부 상태값에 의존 하지 않고 내부에서 toggle 되고 추가로 상태를 바인딩 해 상태값을 사용할수 있도록 로직 구현중

--- a/src/common/scss/components/ui_accordion.scss
+++ b/src/common/scss/components/ui_accordion.scss
@@ -1,4 +1,10 @@
 @import "common/scss/utils.scss";
 
 .ui_accordion {
+  width: 100%;
+  height: auto;
+  .accordion_summary {
+    height: 50px;
+    cursor: pointer;
+  }
 }
