--- a/src/common/scss/reset.scss
+++ b/src/common/scss/reset.scss
@@ -43,3 +43,4 @@ html {
 @import "./components/ui_checkbox.scss";
 @import "./components/ui_radio.scss";
 @import "./components/ui_switch.scss";
+@import "./components/ui_accordion.scss";
