React Transition Group 적용 예정

--- a/src/common/scss/components/ui_accordion.scss
+++ b/src/common/scss/components/ui_accordion.scss
@@ -6,6 +6,10 @@
   .accordion_summary {
     height: 50px;
     cursor: pointer;
-    @include flex(initial, space-between);
+    @include flex(center, space-between);
+
+    .summary-title {
+      @include flex(initial, initial);
+    }
   }
 }
