--- a/src/common/scss/components/ui_accordion.scss
+++ b/src/common/scss/components/ui_accordion.scss
@@ -9,6 +9,10 @@
   &.expanded {
     & > .accordion_summary {
       border-bottom: 1px solid #dddddd;
+      .icon-arrow {
+        transform: rotate(-180deg);
+        transition: all 0.2s ease-in;
+      }
     }
   }
 
