--- a/src/common/scss/utils.scss
+++ b/src/common/scss/utils.scss
@@ -17,3 +17,5 @@ $disabledT-color: #a5a5a5;
 $placehold-color: #999999;
 $focus-color: $primary-color;
 $error-color: red;
+
+$cubic-bezier: cubic-bezier(0.4, 0, 0.2, 1) 0ms;
