accordion csstransition 기능 추가

--- a/src/common/scss/components/ui_dialog.scss
+++ b/src/common/scss/components/ui_dialog.scss
@@ -34,3 +34,19 @@
     }
   }
 }
+
+.aaa-enter {
+  /* 입장 애니메이션 스타일 */
+}
+
+.aaa-enter-active {
+  /* 입장 애니메이션 활성 스타일 */
+}
+
+.aaa-exit {
+  /* 퇴장 애니메이션 스타일 */
+}
+
+.aaa-exit-active {
+  /* 퇴장 애니메이션 활성 스타일 */
+}
