--- a/src/common/scss/components/ui_accordion.scss
+++ b/src/common/scss/components/ui_accordion.scss
@@ -5,21 +5,29 @@
   height: auto;
   border-radius: 8px;
   background-color: white;
-
+  & > .accordion_summary {
+    .icon-arrow {
+      transform: rotate(0deg);
+      transition: all 200ms ease;
+    }
+  }
   &.expanded {
     & > .accordion_summary {
-      border-bottom: 1px solid #dddddd;
       .icon-arrow {
         transform: rotate(-180deg);
-        transition: all 0.2s ease-in;
       }
     }
   }
 
   .collapse {
-    padding: 3%;
+    max-height: 0;
     height: auto;
-    transition: all 700ms $cubic-bezier;
+    overflow: hidden;
+    transition: max-height 500ms ease;
+    & > .container {
+      padding: 3%;
+    }
+
     &.transition-coll-enter {
       max-height: 0;
     }
@@ -39,10 +47,9 @@
     &.transition-coll-exit-active {
       max-height: 0;
     }
-
-    &.transition-coll-exit-done {
-      max-height: 0;
-    }
+    // &.transition-coll-exit-done {
+    //   max-height: 0;
+    // }
   }
 
   .accordion_summary {
