--- a/src/common/scss/reset.scss
+++ b/src/common/scss/reset.scss
@@ -44,3 +44,5 @@ html {
 @import "./components/ui_radio.scss";
 @import "./components/ui_switch.scss";
 @import "./components/ui_accordion.scss";
+@import "./components/ui_popover.scss";
+@import "./components/ui_textarea.scss";
