--- a/src/common/scss/components/ui_button.scss
+++ b/src/common/scss/components/ui_button.scss
@@ -7,12 +7,31 @@
   cursor: pointer;
   border-radius: 4px;
   color: white;
+  position: relative;
+  overflow: hidden;
 
   &.disabled {
     cursor: not-allowed;
     background-color: $disabledB-color;
     & > div {
       color: $disabledT-color;
+    }
+  }
+
+  .ripple_circle {
+    border-radius: 50%;
+    background-color: rgba(255, 255, 255, 0.3);
+    position: absolute;
+    transform: scale(0);
+
+    &.active {
+      animation: ripple 0.6s linear;
+      @keyframes ripple {
+        to {
+          transform: scale(2.5);
+          opacity: 0;
+        }
+      }
     }
   }
 }
