--- a/src/layout/container/Container.scss
+++ b/src/layout/container/Container.scss
@@ -12,7 +12,7 @@
       font-weight: 600;
     }
   }
-  .content {
+  & > .content {
     height: calc(100% - 171px);
     overflow: auto;
     padding: 50px;
