table componet 제작 진행중(pasination 기능 추가)

--- a/src/common/scss/reset.scss
+++ b/src/common/scss/reset.scss
@@ -46,3 +46,4 @@ html {
 @import "./components/ui_accordion.scss";
 @import "./components/ui_popover.scss";
 @import "./components/ui_textarea.scss";
+@import "./components//ui_table.scss";
