--- a/src/common/scss/reset.scss
+++ b/src/common/scss/reset.scss
@@ -46,4 +46,6 @@ html {
 @import "./components/ui_accordion.scss";
 @import "./components/ui_popover.scss";
 @import "./components/ui_textarea.scss";
-@import "./components//ui_table.scss";
+@import "./components/ui_table.scss";
+@import "./components/ui_tooltip.scss";
+@import "./components/ui_select.scss";
