--- a/src/common/scss/components/ui_accordion.scss
+++ b/src/common/scss/components/ui_accordion.scss
@@ -6,9 +6,11 @@
   border-radius: 8px;
   background-color: white;
   & > .accordion_summary {
-    .icon-arrow {
-      transform: rotate(0deg);
-      transition: all 200ms ease;
+    .icon-arrow-box {
+      .icon-arrow {
+        transform: rotate(0deg);
+        transition: all 200ms ease;
+      }
     }
   }
   &.expanded {
@@ -57,8 +59,10 @@
     cursor: pointer;
     @include flex(center, space-between);
     padding: 0 3%;
+    position: relative;
 
     .summary-title {
+      width: 100%;
       @include flex(initial, initial);
     }
   }
