--- a/src/common/scss/components/ui_checkbox.scss
+++ b/src/common/scss/components/ui_checkbox.scss
@@ -16,31 +16,34 @@
   .label-row {
     @include flex(center, initial);
     gap: 5px;
-    .container {
-      border: 1px solid #737373;
-      width: 16px;
-      height: 16px;
-      border-radius: 2px;
-      position: relative;
-      input {
-        position: absolute;
-        width: 100%;
-        height: 100%;
-        opacity: 0;
-        z-index: 2;
-        cursor: pointer;
-      }
-      .check-icon {
-        display: none;
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        font-size: 20px;
-      }
-    }
+
     .label {
       cursor: pointer;
+    }
+  }
+  .container {
+    border: 1px solid #737373;
+    width: 16px;
+    height: 16px;
+    border-radius: 2px;
+    position: relative;
+    input {
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      opacity: 0;
+      z-index: 2;
+      cursor: pointer;
+      top: 0;
+      left: 0;
+    }
+    .check-icon {
+      display: none;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      font-size: 20px;
     }
   }
 }
