--- a/src/common/scss/components/ui_switch.scss
+++ b/src/common/scss/components/ui_switch.scss
@@ -3,26 +3,39 @@
 #ui_switch {
   width: 46px;
   height: 24px;
+  & > input {
+    display: none;
+
+    &:checked + .slider {
+      background-color: #007acc;
+    }
+    &:checked + .slider {
+      &::before {
+        transform: translateX(22px);
+      }
+    }
+  }
   .slider {
     width: 100%;
     height: 100%;
     border-radius: 50px;
     background-color: #cccccc;
     position: relative;
+    transition: 0.3s ease;
     cursor: pointer;
+    display: inline-block;
 
     &::before {
-      position: absolute;
       content: "";
+      position: absolute;
+      bottom: 2px;
+      left: 2px;
       z-index: 1;
       background-color: white;
       width: 20px;
       height: 20px;
       border-radius: 50%;
-      top: 50%;
-      transform: translateY(-50%);
       transition: 0.3s ease;
-      left: 3px;
     }
     &.checked {
       background-color: $primary-color;
