--- a/src/common/scss/components/ui_select.scss
+++ b/src/common/scss/components/ui_select.scss
@@ -12,6 +12,9 @@
       width: 100%;
       height: 100%;
       .select-summary {
+        &.disabled {
+          background-color: #f5f5f5;
+        }
         width: calc(100% - 20px);
         height: 100%;
         padding: 0px 10px;
@@ -19,6 +22,7 @@
         border: 1px solid #eeeeee;
         @include flex(center, space-between);
         border-radius: 8px;
+        font-size: 12px;
 
         &.active {
           border-color: $primary-color;
@@ -40,13 +44,21 @@
   padding: 0;
   .content-box {
     .select-option {
+      max-height: 214px;
+      overflow: auto;
       .select-item {
+        font-size: 12px;
+        &.disabled {
+          background-color: #f5f5f5;
+          color: #c5c6ca;
+          cursor: default;
+        }
         &.selected {
           background-color: rgb(228, 238, 255);
           color: $primary-color;
           font-weight: 700;
         }
-        padding: 10px;
+        padding: 10px 12px;
         cursor: pointer;
         &:hover {
           background-color: rgb(228, 238, 255);
