--- a/src/common/scss/reset.scss
+++ b/src/common/scss/reset.scss
@@ -49,3 +49,4 @@ html {
 @import "./components/ui_table.scss";
 @import "./components/ui_tooltip.scss";
 @import "./components/ui_select.scss";
+@import "./components/ui_toast.scss";
