--- a/src/common/scss/components/ui_toast.scss
+++ b/src/common/scss/components/ui_toast.scss
@@ -66,15 +66,18 @@
       font-style: normal;
       white-space: nowrap;
       border-radius: 4px;
-      font-size: 12px;
-      padding: 12px 14px;
+      font-size: 14px;
+      padding: 16px;
 
       &:not(:first-child) {
         margin-top: 4px;
       }
 
-      .ui_toast__close {
+      .ui_toast_close {
         cursor: pointer;
+        font-size: 16px;
+        padding: 5px;
+        font-weight: 600;
       }
     }
   }
