--- a/src/layout/main/MainContentsLayout.scss
+++ b/src/layout/main/MainContentsLayout.scss
@@ -12,6 +12,12 @@
   .side-menu {
     width: 250px;
     border-right: 1px solid #eeeeee;
+    .menu_close {
+      position: fixed;
+      top: 12px;
+      right: 12px;
+      z-index: 1;
+    }
   }
   .logo {
     @include flex(center, center);
