--- a/src/common/scss/components/ui_dialog.scss
+++ b/src/common/scss/components/ui_dialog.scss
@@ -14,7 +14,7 @@
     & > .content-box {
       & > .content-area {
         opacity: 1;
-        transform: scale(1);
+        transform: scale(1) translate(-50%, -50%);
       }
       & > .di_background {
         background-color: rgba(0, 0, 0, 0.4);
@@ -26,7 +26,7 @@
     & > .content-box {
       & > .content-area {
         opacity: 0;
-        transform: scale(0.8);
+        transform: scale(0.8) translate(-50%, -50%);
       }
       & > .di_background {
         background-color: rgba(0, 0, 0, 0.4);
@@ -38,7 +38,7 @@
     & > .content-box {
       & > .content-area {
         opacity: 0;
-        transform: scale(0.8);
+        transform: scale(0.8) translate(-50%, -50%);
       }
       & > .di_background {
         background-color: rgba(0, 0, 0, 0);
