--- a/src/layout/container/Container.scss
+++ b/src/layout/container/Container.scss
@@ -18,3 +18,11 @@
     padding: 50px;
   }
 }
+
+@media screen and (max-width: 767px) {
+  #container {
+    & > .content {
+      padding: 20px;
+    }
+  }
+}
