--- a/src/layout/contents/ContentBox.scss
+++ b/src/layout/contents/ContentBox.scss
@@ -7,3 +7,10 @@
   gap: 20px;
   @include flex(center, center);
 }
+
+@media screen and (max-width: 767px) {
+  #content-box {
+    flex-wrap: wrap;
+    padding: 20px;
+  }
+}
