--- a/src/layout/main/MainContentsLayout.scss
+++ b/src/layout/main/MainContentsLayout.scss
@@ -49,6 +49,10 @@
         height: 100%;
         background-color: #fff;
         z-index: 1;
+        & > nav {
+          height: calc(100% - 70px);
+          overflow: auto;
+        }
       }
       #container {
         width: 100%;
