feature/mainpage 메인페이지 layout 잡는중

--- a/src/layout/main/MainContentsLayout.scss
+++ b/src/layout/main/MainContentsLayout.scss
@@ -23,6 +23,7 @@
     @include flex(center, center);
     gap: 5px;
     height: 70px;
+    cursor: pointer;
     h4 {
       font-size: 20px;
     }
